@@ -1,16 +1,21 @@
 package com.nhnacademy.front.shop.controller;
 
+import com.auth0.jwt.JWT;
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.nhnacademy.front.common.dto.CommonResponse;
+import com.nhnacademy.front.common.dto.PageResponse;
+import com.nhnacademy.front.shop.book.client.BookClient;
 import com.nhnacademy.front.shop.book.dto.AdminBookResponse;
 import com.nhnacademy.front.shop.book.dto.BookAuthorDto;
 import com.nhnacademy.front.shop.book.dto.BookCreateForm;
+import com.nhnacademy.front.shop.book.dto.BookCreateRequest;
 import com.nhnacademy.front.shop.book.dto.BookDetailResponse;
 import com.nhnacademy.front.shop.book.dto.BookPreviewResponse;
 import com.nhnacademy.front.shop.book.dto.BookStatus;
 import com.nhnacademy.front.shop.book.dto.BookUpdateForm;
 import com.nhnacademy.front.shop.book.dto.BookUpdateRequest;
-import com.nhnacademy.front.shop.book.dto.BookCreateRequest;
 import com.nhnacademy.front.shop.book.dto.SortType;
 import com.nhnacademy.front.shop.category.client.dto.CategoryFlatDto;
 import com.nhnacademy.front.shop.category.client.dto.CategoryTreeDto;
@@ -23,20 +28,21 @@ import com.nhnacademy.front.shop.coupon.store.client.dto.CouponIssueRequest;
 import com.nhnacademy.front.shop.coupon.store.client.dto.StoresResponse;
 import com.nhnacademy.front.shop.like.client.dto.LikeResponse;
 import com.nhnacademy.front.shop.like.service.LikeService;
-
+import com.nhnacademy.front.shop.review.client.ReviewClient;
+import com.nhnacademy.front.shop.review.dto.ReviewListResponse;
+import com.nhnacademy.front.util.PageUtil;
 import feign.FeignException;
 import jakarta.validation.Valid;
-
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
-import java.util.Map;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -46,21 +52,9 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-
-import com.auth0.jwt.JWT;
-import com.auth0.jwt.interfaces.DecodedJWT;
-import com.nhnacademy.front.common.dto.CommonResponse;
-import com.nhnacademy.front.common.dto.PageResponse;
-import com.nhnacademy.front.shop.book.client.BookClient;
-import com.nhnacademy.front.shop.review.client.ReviewClient;
-import com.nhnacademy.front.shop.review.dto.ReviewListResponse;
-import com.nhnacademy.front.util.PageUtil;
-
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 @Slf4j
@@ -77,10 +71,13 @@ public class BookController {
 
 
     @GetMapping("/books/{bookId}")
-    public String getBookDetail(@PathVariable Long bookId,
-                                @RequestParam(defaultValue = "0") int  page,
-                                @RequestParam(defaultValue = "10") int  size,
-                                Model model, @CookieValue(name = "accessToken", required = false) String accessToken) {
+    public String getBookDetail(
+            @PathVariable Long bookId,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            Model model,
+            @CookieValue(name = "accessToken", required = false) String accessToken
+    ) {
         CommonResponse<BookDetailResponse> books = bookClient.getBookByIdWithParentCategory(bookId);
         PageResponse<ReviewListResponse> reviews =
                 reviewClient.getReviewsByBookId(bookId, page, size);
@@ -101,8 +98,7 @@ public class BookController {
         List<CouponResponse> bookCoupons = new ArrayList<>();
         List<CouponResponse> categoryCoupons = new ArrayList<>();
 
-
-        try{
+        try {
             bookCoupons = couponClient.getByBookId(bookId, 0, 10).data().content();
             categoryCoupons = books.data().categories().stream()
                     .flatMap(cat ->
@@ -116,7 +112,6 @@ public class BookController {
 
         log.info(">>> bookCoupons (size={}): {}", bookCoupons.size(), bookCoupons);
         log.info(">>> categoryCoupons (size={}): {}", categoryCoupons.size(), categoryCoupons);
-
 
         List<CouponView> coupons = Stream.concat(bookCoupons.stream(), categoryCoupons.stream())
                 .map(c -> {
@@ -141,8 +136,6 @@ public class BookController {
 
         log.info(">>> coupons (combined, size={}): {}", coupons.size(), coupons);
 
-
-
         AtomicBoolean liked = new AtomicBoolean(false);
         AtomicReference<Long> likeId = new AtomicReference<>(null);
 
@@ -157,12 +150,14 @@ public class BookController {
                     });
         }
 
-        model.addAttribute("book",      books.data());
-        model.addAttribute("reviews",   reviews.content());
+        bookClient.increaseViewCount(bookId);
+
+        model.addAttribute("book", books.data());
+        model.addAttribute("reviews", reviews.content());
         model.addAttribute("reviewPage", reviews);
-        model.addAttribute("pageInfo",  pageInfo);
-        model.addAttribute("bookId",    bookId);
-        model.addAttribute("userId",    userId);
+        model.addAttribute("pageInfo", pageInfo);
+        model.addAttribute("bookId", bookId);
+        model.addAttribute("userId", userId);
         model.addAttribute("liked", liked);
         model.addAttribute("likeId", likeId);
         model.addAttribute("coupons", coupons);
@@ -172,12 +167,13 @@ public class BookController {
 
     @GetMapping("/books/bestseller")
     public String getBestsellerBooks(@RequestParam(defaultValue = "REVIEW") SortType sortType,
-        @RequestParam(defaultValue = "0") int page, Model model) {
-        CommonResponse<PageResponse<BookPreviewResponse>> response = bookClient.getAllBestsellerBooks(sortType, page, 10);
+                                     @RequestParam(defaultValue = "0") int page, Model model) {
+        CommonResponse<PageResponse<BookPreviewResponse>> response = bookClient.getAllBestsellerBooks(sortType, page,
+                10);
         PageResponse<BookPreviewResponse> pageData = response.data();
 
         PageUtil.PageInfo pageInfo = PageUtil.calculatePageRange(
-            pageData.page(), pageData.totalPages(), 5
+                pageData.page(), pageData.totalPages(), 5
         );
 
         model.addAttribute("bookList", pageData.content());
@@ -190,12 +186,12 @@ public class BookController {
 
     @GetMapping("/books/new")
     public String getNewBooks(@RequestParam(defaultValue = "REVIEW") SortType sortType,
-        @RequestParam(defaultValue = "0") int page, Model model) {
+                              @RequestParam(defaultValue = "0") int page, Model model) {
         CommonResponse<PageResponse<BookPreviewResponse>> response = bookClient.getAllNewBooks(sortType, page, 10);
         PageResponse<BookPreviewResponse> pageData = response.data();
 
         PageUtil.PageInfo pageInfo = PageUtil.calculatePageRange(
-            pageData.page(), pageData.totalPages(), 5
+                pageData.page(), pageData.totalPages(), 5
         );
 
         model.addAttribute("bookList", pageData.content());
@@ -208,12 +204,13 @@ public class BookController {
 
     @GetMapping("/books/recommend")
     public String getRecommendBooks(@RequestParam(defaultValue = "REVIEW") SortType sortType,
-        @RequestParam(defaultValue = "0") int page, Model model) {
-        CommonResponse<PageResponse<BookPreviewResponse>> response = bookClient.getAllRecommendedBooks(sortType, page, 10);
+                                    @RequestParam(defaultValue = "0") int page, Model model) {
+        CommonResponse<PageResponse<BookPreviewResponse>> response = bookClient.getAllRecommendedBooks(sortType, page,
+                10);
         PageResponse<BookPreviewResponse> pageData = response.data();
 
         PageUtil.PageInfo pageInfo = PageUtil.calculatePageRange(
-            pageData.page(), pageData.totalPages(), 5
+                pageData.page(), pageData.totalPages(), 5
         );
 
         model.addAttribute("bookList", pageData.content());
@@ -265,7 +262,7 @@ public class BookController {
         List<Long> selectedCategoryIds = response.data().categories().stream()
                 .map(List::getLast)
                 .map(CategoryFlatDto::id)
-                .toList();
+                .collect(Collectors.toList());
 
         model.addAttribute("book", response.data());
         model.addAttribute("categories", categories);
@@ -366,7 +363,7 @@ public class BookController {
         CommonResponse<PageResponse<AdminBookResponse>> response = bookClient.getBooksByAdmin(page, 10);
         PageResponse<AdminBookResponse> books = response.data();
         PageUtil.PageInfo pageInfo = PageUtil.calculatePageRange(
-            books.page(), books.totalPages(), 5
+                books.page(), books.totalPages(), 5
         );
 
         model.addAttribute("currentPage", "list");
